# sprite_studio

./: Cargo.toml
src/: bundle.rs  components.rs  constant.rs  iter.rs  lib.rs  load.rs  part.rs  prefab.rs  renderer.rs  resource.rs  shaders.rs  splash.rs  system.rs  timeline.rs  traits.rs  types.rs  utils.rs
src/components/: animation_nodes.rs  animation_part.rs  animation_player.rs  animation_root.rs  animation_time.rs  play_animation_key.rs
src/iter/: animation_nodes.rs  animation_range.rs
src/part/: bounds.rs  part_type.rs
src/renderer/: sprite_args.rs
src/resource/: animation.rs  animation_store.rs  data.rs  name.rs  pack.rs  part.rs  part_timeline.rs  timeline.rs
src/shader/compiled/fragment/: sprite.frag.spv
src/shader/compiled/vertex/: sprite.vert.spv
src/shader/fragment/: sprite.frag
src/shader/vertex/: sprite.vert
src/splash/: id.rs  state.rs  translation.rs
src/system/: animation_time_increment.rs  animation_transition.rs  apply_timeline.rs  build_nodes.rs  debug_collision.rs  key_change_event.rs  root_translate.rs
src/timeline/: from_user.rs  key_frame.rs  linear_color.rs
src/traits/: animation_file.rs  collision_color.rs  from_user.rs  interpolate.rs  translate_animation.rs
src/types/: animation_instance.rs  animation_ref.rs  bound_type.rs  cell.rs  effect.rs  event.rs  from_user.rs  interpolate.rs  key_frame.rs  linear_color.rs  node.rs  non_decode_user.rs  part_info.rs  part_type.rs  vertex.rs
