[package]
name = "amethyst-sprite-studio"
version = "0.1.0"
authors = ["Kaneyuki Hiromasa <matsugen2511@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
amethyst = {git = "https://github.com/amethyst/amethyst.git", features = ["vulkan"] }
itertools= "0.9.0"
ron= "0.5.1"
log={ version = "0.4.8", features = ["release_max_level_off"] }
failure= "0.1.7"
lazy_static= "1.4.0"
num= "0.2.1"
